Set up live reload with BrowserSyc.io

--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -11,14 +11,19 @@ html {
 
 		#{headings()} {
 			//Declare styles for h1-h6 at once
+
 		}
 
 		header {
 
+
 		}
 
 		main {
-
+			h1 {
+				color: black;
+				display: flex;
+			}
 		}
 
 		footer {
