--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -6,20 +6,61 @@
 //mobile syles
 html {
 	font-size: 18px;
+}
 
-
-	body {		
+	body {
+	}
 
 		header {}
 
 		main {
-			h1 {color: red;}
-		}
-		
+			h1,
+			h2,
+			h3,
+			h4 {
+				text-align: center;
+			}	
+			#automatedTools {
+				span {
+					text-decoration: underline;
+				}
+			}	
+			#theGrid {
 
+				
+				.col1, 
+				.col2, 
+				.col3, 
+				.col4, 
+				.col5, 
+				.col6, 
+				.col7, 
+				.col8, 
+				.col9, 
+				.col10, 
+				.col11, 
+				.col12, {
+					background-color: blue;
+					p {
+						text-align: center;
+					}
+				}
+			}
+			#templating {
+				em {
+					text-decoration: underline;
+				} 
+				br {
+					margin-bottom: 3rem;				}
+				}
+				strong {
+					color: red;
+				}
+				
+			}
+		
 		footer {}
-	}
-}
+
 //tablet styles
 @media only screen and (min-width: 768px) {
 
