--- a/builds/dev/css/styles.css
+++ b/builds/dev/css/styles.css
@@ -403,127 +403,140 @@ template {
   display: none; }
 
 /*  SECTIONS  */
-.section {
+section {
   clear: both;
   padding: 0px;
   margin: 0px;
   zoom: 1; }
 
-.section:before,
-.section:after {
+section:before,
+section:after {
   content: "";
   display: table; }
 
-.section:after {
+section:after {
   clear: both; }
 
 /*  COLUMN SETUP  */
-/*  GRID OF TWELVE  */
+.col1,
+.col2,
+.col3,
+.col4,
+.col5,
+.col6,
+.col7,
+.col8,
+.col9,
+.col10,
+.col11,
 .col12 {
   width: 100%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col12 :first-child {
-    margin-left: 0; }
+  margin: 1% 0 1% 0%; }
 
-.col11 {
-  width: 91.53%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col11 :first-child {
-    margin-left: 0; }
-
-.col10 {
-  width: 83.06%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col10 :first-child {
-    margin-left: 0; }
-
-.col9 {
-  width: 74.6%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col9 :first-child {
-    margin-left: 0; }
-
-.col8 {
-  width: 66.13%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col8 :first-child {
-    margin-left: 0; }
-
-.col7 {
-  width: 57.66%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col7 :first-child {
-    margin-left: 0; }
-
-.col6 {
-  width: 49.2%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col6 :first-child {
-    margin-left: 0; }
-
-.col5 {
-  width: 40.73%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col5 :first-child {
-    margin-left: 0; }
-
-.col4 {
-  width: 32.26%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col4 :first-child {
-    margin-left: 0; }
-
-.col3 {
-  width: 23.8%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col3 :first-child {
-    margin-left: 0; }
-
-.col2 {
-  width: 15.33%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col2 :first-child {
-    margin-left: 0; }
-
-.col1 {
-  width: 6.866%;
-  display: block;
-  float: left;
-  margin: 1% 0 1% 1.6%; }
-  .col1 :first-child {
-    margin-left: 0; }
-
-/*  GO FULL WIDTH BELOW 480 PIXELS */
-@media only screen and (max-width: 480px) {
-  .col1, .col2, .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
-    width: 100%;
-    margin: 1% 0 1% 0%; } }
+/* Tablet and Up*/
+@media screen and (min-width: 768px) {
+  /*  GRID OF TWELVE  */
+  .col12 {
+    width: 97%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col11 {
+    width: 88.53%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col10 {
+    width: 80.5%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col9 {
+    width: 72.3%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col8 {
+    width: 64.13%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col7 {
+    width: 56.1%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col6 {
+    width: 47.4%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col5 {
+    width: 39.18%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col4 {
+    width: 31.2%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col3 {
+    width: 23%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col2 {
+    width: 14.8%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; }
+  .col1 {
+    width: 6.6%;
+    display: block;
+    float: left;
+    margin: 1% 0 1% 1.6%; } }
 
 html {
   font-size: 18px; }
-  html body main h1 {
+  html body main h1,
+  html body main h2,
+  html body main h3,
+  html body main h4 {
+    text-align: center; }
+  html body main #automatedTools span {
+    text-decoration: underline; }
+  html body main #theGrid .col1,
+  html body main #theGrid .col2,
+  html body main #theGrid .col3,
+  html body main #theGrid .col4,
+  html body main #theGrid .col5,
+  html body main #theGrid .col6,
+  html body main #theGrid .col7,
+  html body main #theGrid .col8,
+  html body main #theGrid .col9,
+  html body main #theGrid .col10,
+  html body main #theGrid .col11,
+  html body main #theGrid .col12 {
+    background-color: blue; }
+    html body main #theGrid .col1 p,
+    html body main #theGrid .col2 p,
+    html body main #theGrid .col3 p,
+    html body main #theGrid .col4 p,
+    html body main #theGrid .col5 p,
+    html body main #theGrid .col6 p,
+    html body main #theGrid .col7 p,
+    html body main #theGrid .col8 p,
+    html body main #theGrid .col9 p,
+    html body main #theGrid .col10 p,
+    html body main #theGrid .col11 p,
+    html body main #theGrid .col12 p {
+      text-align: center; }
+  html body main #templating em {
+    text-decoration: underline; }
+  html body main #templating br {
+    margin-bottom: 3rem; }
+  html body main #templating strong {
     color: red; }
 
 @media only screen and (min-width: 960px) {
