--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -1,8 +1,8 @@
-$color1: ;
-$color2: ;
-$color3: ;
-$color4: ;
-$color5: ;
+$color1: white;
+$color2: #000;
+$color3: #ccc;
+$color4: lightblue;
+$color5: blue;
 
 $font1: ;
 $font2: ;
