--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -2,6 +2,8 @@
 <html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--Double curly braces load data from the top of pages -->
 	<meta description="{{description}}">
 	<meta property="og:title" content="{{title}}" />
@@ -11,6 +13,8 @@
 	<meta property="og:description" content="{{description}}" />
 	<title>{{title}}</title>
 	<link rel="icon" type="image/png" href="./builds/dev/img/favicon.png">
+	<link rel="icon" type="image/ico" href="img/logo.ico">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- inject:css -->
   	<!-- endinject -->
@@ -19,10 +23,58 @@
   <![endif]-->
 </head>
 <body>
+	<header>
+		<a href="#main" class="sr-only">Skip to content</a>
+		<nav>
+			<img src="" alt="minframe Logo">
+			<i class="fa fa-bars"></i>
+			<ul>
+				<li><a href="index.html#getStarte">Get Started</a></li>
+				<li><a href="#">Framework Tutorial</a></li>
+				<li><a href="https://github.com/joshboyan/minframe">Github</a></li>
+				<li><a href="#">npm</a></li>
+				<li><a href="https://github.com/joshboyan/minframe/issues">Issues</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
 
 {{> body}}
 
-
+	<footer>
+		<div class="col2">
+			<img src="" alt="Josh">
+			<ul>
+				<li><a href="https://www.linkedin.com/in/joshboyan"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
+				<li><a href="https://github.com/joshboyan"><i title="GitHub" class="fa fa-github"></i></a></li>
+				<li><a href="http://codepen.io/joshboyan/"><i title="CodePen" class="fa fa-codepen"></i></a></li>
+			</ul>
+		</div>
+		<div class="col5">
+			<p>Hi! I'm Josh, a web designer and developer out of Portland, OR. I built minframe to help others build websites quickly and easily. If you need something more complicated I would be happy to build it for you, just use the form <span class="mobileFormPosition">below.</span><span class="tabletFormPosition">to the right.</span>Any issues should be submitted to the <a href="https://github.com/joshboyan/minframe/issues">GitHub repo</a>.</p>
+		</div>
+		<div class="col5">
+			<form action="post">
+				<label for="name">Name</label>
+				<input type="text" name="name">
+				<label for="email">Email</label>
+				<input type="text" name="email">
+				<label for="whatsUp">What's Up?</label>
+				<select name="whatsUp">
+  				<option value="help">Build me a site!</option>
+  				<option value="suggestion">I have a suggestion.</option>
+  				<option value="question">I have a question.</option>
+  				<option value="issue">I found an issue.</option>
+				</select>
+				<label for="message">Tell me more...</label>
+				<textarea name="message" rows="10" cols="30"></textarea>
+				<input type="submit">
+			</form>
+		</div>
+		<section>
+			<span>&copy; Josh Boyan 2016</span>
+			<i aria-label="Back to Top" class="fa fa-angle-double-up"></i>
+		</section>
+	</footer>
 <!-- inject:js -->
 <!-- endinject -->
 </body>
