--- a/components/sass/styles.scss
+++ b/components/sass/styles.scss
@@ -6,7 +6,7 @@
 //mobile syles
 html {
 	font-size: 18px;
-
+	line-height: 1.5;
 
 	body {		
 		p {
@@ -26,9 +26,26 @@ html {
 				margin-top: 3.375rem;
 				text-align: center;
 			}	
+
+			h1 strong {
+				font-size: 2.75rem;
+			}
 			#automatedTools {
 				span {
 					text-decoration: underline;
+				}
+
+				i {
+					width: 100%;
+					text-align: center;
+					margin-top: 1.5rem;
+					margin-bottom: .75rem;
+					font-size: 2.25rem;
+				}
+				hr {
+					width: 30%;
+					border: 1px solid $color2;
+					margin-bottom: 1rem;
 				}
 
 				p {
@@ -36,8 +53,24 @@ html {
 				}
 			}	
 			#theGrid {
+				code {
+					@include code;
+				}
 
-				
+				p:nth-of-type(2) {
+					position: relative;
+					width: 10%;
+					text-align: left;
+					background-color: $color1;
+					padding: 1rem;
+					margin:  0 80% -3.75rem 10%;
+				}
+
+				.section {
+					margin-top: 2.25rem;
+					padding-top: 1.5rem;
+					border: 1px solid $color5;
+				}
 				.col1, 
 				.col2, 
 				.col3, 
@@ -53,6 +86,7 @@ html {
 					background-color: blue;
 					p {
 						text-align: center;
+						padding: 1rem 0;
 					}
 				}
 			}
@@ -60,17 +94,52 @@ html {
 				em {
 					text-decoration: underline;
 				} 
-				br {
-					margin-bottom: 3rem;				
+				
+				h4 {
+					margin-top: .75rem;
+				}
+				p {
+					margin-bottom: 1.5rem;
+				}
+				.col6 div {
+					@include code;
+				}
+				.col6:nth-of-type(1) div {
+					margin-top: 3rem;
 				}
 				strong {
 					color: red;
 				}
 				
 			}
+			#getStarted {
+				code {
+					@include code;
+				}
+			}
 		
 		}
-		footer {}
+		footer {
+			form {
+				input,
+				label,
+				select,
+				textarea {
+					width: 100%;
+				}
+			label {
+				font-size: .75rem;
+			}
+			input,
+			select {
+				margin-bottom: .50rem;
+			}
+
+			select {
+				background-color: $color4;
+			}
+			}
+		}
 	}
 }
 //tablet styles
