Larger resolution styles

--- a/components/layouts/default.html
+++ b/components/layouts/default.html
@@ -26,33 +26,43 @@
 	<header>
 		<a href="#main" class="sr-only">Skip to content</a>
 		<nav>
-			<img src="" alt="minframe Logo">
-			<i class="fa fa-bars"></i>
+			<div class="navbar">
+			<a href="#main"><img src="./builds/dev/img/minframeLogoInverse.png" alt="minframe Logo"></a>
+			<i onClick="slideIn()" class="fa fa-bars"></i>
 			<ul>
-				<li><a href="index.html#getStarte">Get Started</a></li>
-				<li><a href="#">Framework Tutorial</a></li>
-				<li><a href="https://github.com/joshboyan/minframe">Github</a></li>
+				
+				<li><a href="#getStarted">Get Started</a></li>
+				<li><a href="#">Tutorial</a></li>
+				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
 				<li><a href="#">npm</a></li>
-				<li><a href="https://github.com/joshboyan/minframe/issues">Issues</a></li>
 				<li><a href="#contact">Contact</a></li>
+			</ul>
+			</div>
+			<ul id="mobileMenu">
+				<li><i onClick="slideOut()" class="fa fa-times"></i></li>
+				<li><a onClick="slideOut()" href="#getStarted">Get Started</a></li>
+				<li><a href="#">Tutorial</a></li>
+				<li><a href="https://github.com/joshboyan/minframe" target="_blank">Github</a></li>
+				<li><a href="#">npm</a></li>
+				<li><a onClick="slideOut()" href="#contact">Contact</a></li>
 			</ul>
 		</nav>
 
 {{> body}}
 
 	<footer>
+		<div class="col5">
+			<p>Hi! I'm Josh, a web designer and developer out of Portland, OR. I built minframe to help others build websites quickly and easily. If you need something more complicated I would be happy to build it for you, just use the form <span class="mobileFormPosition">below </span><span class="tabletFormPosition">to the right </span>to tell me about your project. Any issues should be submitted to the <a href="https://github.com/joshboyan/minframe/issues" target="_blank">GitHub repo</a>.</p>
+		</div>
 		<div class="col2">
-			<img src="" alt="Josh">
+			<img src="./builds/dev/img/profile.jpg" alt="Josh">
 			<ul>
-				<li><a href="https://www.linkedin.com/in/joshboyan"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
-				<li><a href="https://github.com/joshboyan"><i title="GitHub" class="fa fa-github"></i></a></li>
-				<li><a href="http://codepen.io/joshboyan/"><i title="CodePen" class="fa fa-codepen"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/joshboyan" target="_blank"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
+				<li><a href="https://github.com/joshboyan" target="_blank"><i title="GitHub" class="fa fa-github"></i></a></li>
+				<li><a href="http://codepen.io/joshboyan/" target="_blank"><i title="CodePen" class="fa fa-codepen"></i></a></li>
 			</ul>
 		</div>
-		<div class="col5">
-			<p>Hi! I'm Josh, a web designer and developer out of Portland, OR. I built minframe to help others build websites quickly and easily. If you need something more complicated I would be happy to build it for you, just use the form <span class="mobileFormPosition">below.</span><span class="tabletFormPosition">to the right.</span>Any issues should be submitted to the <a href="https://github.com/joshboyan/minframe/issues">GitHub repo</a>.</p>
-		</div>
-		<div class="col5">
+		<div id="contact" class="col5">
 			<form action="post">
 				<label for="name">Name</label>
 				<input type="text" name="name">
@@ -66,14 +76,14 @@
   				<option value="issue">I found an issue.</option>
 				</select>
 				<label for="message">Tell me more...</label>
-				<textarea name="message" rows="10" cols="30"></textarea>
+				<textarea name="message" rows="5"></textarea>
 				<input type="submit">
 			</form>
 		</div>
-		<section>
+		<section id="copy">
 			<span>&copy; Josh Boyan 2016</span>
-			<i aria-label="Back to Top" class="fa fa-angle-double-up"></i>
-		</section>
+			<a href="#main"><i aria-label="Back to Top" class="fa fa-angle-double-up"></i></a>
+		</section><!--/#copy-->
 	</footer>
 <!-- inject:js -->
 <!-- endinject -->
