--- a/components/pages/index.html
+++ b/components/pages/index.html
@@ -1,17 +1,17 @@
 ---
 layout: default
-title: minframe | Mobile-first, Responsive, Light-weight
+title: minframe | Mobile-first, Responsive, Light-weight Front-End Framework
 url: 
 image:
-description: minframe is a modern HTML5, mobile-first framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat. 
+description: minframe is a modern HTML5, mobile-first front-end framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat. 
 
 ---
 	
 </header>
 <main id="main">
-<h1><strong>min</strong>imal responsive <strong>frame</strong>work</h1>
+<h1><strong>min</strong>imal responsive front-end <strong>frame</strong>work</h1>
 <section id="summary">
-	<p>minframe is a modern HTML5, mobile-first framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat. The only boilerplate styling is normalize.scss, our 12 column responsive grid and basic HTML5 Sass nesting. Javascript is only required during the build process, not in the browser.</p>
+	<p>minframe is a modern HTML5, mobile-first front-end framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat. The only boilerplate styling is normalize.scss, our 12 column responsive grid and basic HTML5 Sass nesting. Javascript is only required during the build process, not in the browser.</p>
 </section><!--/#summary-->
 <section id="automatedTools">
 <h2>Automated Development Tools</h2>
@@ -192,7 +192,7 @@ description: minframe is a modern HTML5, mobile-first framework built with Sass 
 </section><!--/#theGrid-->
 <section id="templating">
 	<h2><em>DRY</em> Reusable Templates</h2>
-	<p>Zurb's Panini flat file compiler allows us to create pages with consistent reusable layouts and partials. Only write your head, header, navigation and footer one time and reuse it across all of your pages. Only make edits once to change your entire site.</p>
+	<p><em>D</em>on't <em>R</em>epeat <em>Y</em>ourself! Zurb's Panini flat file compiler allows us to create pages with consistent reusable layouts and partials. Only write your head, header, navigation and footer one time and reuse it across all of your pages. Only make edits once to change your entire site. If you need multiple layouts, just create them and call which one you would like to use in the Front Matter header on each page.</p>
 	<div class="col6">
 		<h4>Front Matter Markup</h4>
 		<p>Top of each unique page(&darr;index.html&darr;)</p>
@@ -200,7 +200,7 @@ description: minframe is a modern HTML5, mobile-first framework built with Sass 
 		<code>
 			---<br>
 			layout: default<br>
-			<strong>title</strong>: minframe | Mobile-first, Responsive, Light-weight<br>
+			<strong>title</strong>: minframe | Mobile-first, Responsive, Light-weight Front-End Framework<br>
 			<strong>url:</strong> <br>
 			<strong>image:</strong> <br>
 			<strong>description:</strong> minframe is a modern HTML5, mobile-first framework built with Sass and Gulp on a 12 column responsive grid. The framework boasts all of the modern accessiblility features and tools developers use in builds but none of the style bloat.<br>
@@ -250,7 +250,7 @@ description: minframe is a modern HTML5, mobile-first framework built with Sass 
 	<div class="col6">
 	<h4>Git CLI</h4>
 	<ol>
-		<li>Clone the repo to your local machine from your terminal.<br><code>git&nbsp;clone&nbsp;https://github.com/joshboyan/minframe.git</code></li>
+		<li>Clone the repo to your local machine from your terminal.<br><code>git clone https://github.com/joshboyan/minframe.git</code></li>
 		<li>Change directories into the repo you just cloned.<br>
 			<code>cd minframe</code>
 		</li>
@@ -267,8 +267,9 @@ description: minframe is a modern HTML5, mobile-first framework built with Sass 
 	</ol>
 	</div>
 	<h4>Git GUI</h4>
-	<a href="https://github.com/joshboyan/minframe">GitHub</a>
-	<a href="#">minframe Tutorial</a>	
+	<p>You can clone minframe using the <a href="https://github.com/joshboyan/minframe" target="_blank"><i class="fa fa-github"></i>GitHub GUI</a> but you will need to use your command line interface to work with minframe.</p>
+	<hr>
+	<p>Need a little more instruction to get started? Check out the <a href="#">minframe front-end framework tutorial!</a></p>	
 </section><!--/#getStarted-->
 
 </main>
